# TaleNode

./: .gitignore  Cargo.toml  DESIGN.md  LICENSE  Makefile  README.md  mkdocs.yml  todolist.md
docs/: index.md
docs/css/: custom.css
docs/export/: integration-guide.md  json-format.md  plugin-export.md  unity-editor.md
docs/getting-started/: installation.md  quickstart.md
docs/reference/: faq.md  keyboard-shortcuts.md  node-reference.md
docs/user-guide/: ai-writing.md  analytics.md  auto-translation.md  bark-dialogue.md  bookmarks-tags.md  canvas.md  characters.md  collaboration.md  comments-review.md  connections.md  dock-layout.md  extensions.md  file-operations.md  groups.md  import.md  inspector.md  localization.md  nodes.md  playtest.md  quests.md  relationships.md  script-editor.md  settings.md  subgraphs.md  templates.md  timeline.md  validation.md  variables.md  version-history.md  voice-synthesis.md  world-database.md
examples/: dragon_quest.talenode  the_last_constellation.talenode  the_last_constellation.talenode.bak  the_last_constellation.talenode.versions
plugins/unity/: CHANGELOG.md  README.md  package.json
src/: app.rs  main.rs
src/actions/: history.rs  mod.rs
src/app/: async_handlers.rs  async_runtime.rs  bark_handlers.rs  canvas.rs  canvas_interactions.rs  canvas_tooltip.rs  collab_handlers.rs  confirm.rs  context_menu.rs  dock.rs  export_io.rs  extension_handlers.rs  file_import.rs  file_io.rs  file_io_locale.rs  menu.rs  mod.rs  panel_handlers.rs  panels.rs  quest_handlers.rs  search.rs  settings.rs  shortcuts.rs  subgraph_nav.rs  templates.rs  theme.rs  timeline_handlers.rs  translate_handlers.rs  voice_handlers.rs  world_handlers.rs  writing_handlers.rs
src/cli/: export.rs  import.rs  info.rs  mod.rs  validate.rs
src/collab/: client.rs  mod.rs  operations.rs  protocol.rs  server.rs
src/export/: analytics_export.rs  bark_export.rs  document_export.rs  flatten.rs  html_export.rs  html_template.rs  json_export.rs  json_export_extras.rs  mod.rs  (+9 more)
(+110 files in other folders)
