[package]
name = "talenode"
version = "1.0.0"
edition = "2021"
description = "Node-based dialogue and quest editor for game developers"
authors = ["TaleNode"]
license = "MIT"
repository = "https://github.com/fognil/TaleNode"

[dependencies]
eframe = "0.31"
egui = "0.31"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
rfd = "0.15"
roxmltree = "0.20"
egui_dock = { version = "0.16", features = ["serde"] }
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"
dirs = "6"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
fastrand = "2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
